# AOC2021

./: .gitignore  README.md  pyproject.toml
R_solution/: day02.R  day06.R  day07.R  day10.R  day11.R  util.R
data/: data_08_example.txt
day1/: day01.R  day01.py
day2/: day02_part1.py
day3/: day03.R  day03.py
day4/: day04.py
day5/: day05.py
day6/: day06.R  day06.py  day06_try1.py
day7/: day07.R  day07.py
day8/: day08.py
python_solution/: d13q2.txt  day02_part2.py  day03.py  day05.py  day06.py  day08.py  day09.py  day09_v2.py  day10.py  day11.py  day11_v2.py  day12.py  day12_no_node.py  day12_v3.py  day13.py  day14.py  day14_v1.py  day15.py  day16.py  time_diff.py  util.py
quest_data/: parser.py
